--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
                 </li>	
         
                 <li class="image-grid__item" data-aos="fade-left" data-aos-duration="1000">
-                    <a href="https://saichii23.github.io/Camare_Project/" class="grid-item" >
-                      <div class="grid-item__image" style="background-image: url(./images/EVENTS\ \(250\ ×\ 200\ px\).png)"></div>
+                    <a href="https://group-count.vercel.app/" class="grid-item" >
+                      <div class="grid-item__image" style="background-image: url(./images/Shopping.png\(250\ ×\ 200\ px\).png)"></div>
                       <div class="grid-item__hover"></div>
-                      <div class="grid-item__name">EVENT MANAGEMENT WEBSITE</div>
+                      <div class="grid-item__name">Shopping's List</div>
                     </a>
                   </li>	
             </ul>
