--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <ul class="image-grid">
                 <li class="image-grid__item" data-aos="fade-right" data-aos-duration="1000">
                   <a href="https://mp-ii.vercel.app/" class="grid-item">
-                    <div class="grid-item__image" style="background-image: url(./images/Rental.png)"></div>
+                    <div class="grid-item__image" style="background-image: url(./images/Car\ Rental.png)"></div>
                     <div class="grid-item__hover"></div>
                     <div class="grid-item__name">Car Rental Services</div>
                   </a>
