--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
                       <div class="grid-item__name">Shopping's List</div>
                     </a>
                   </li>	
+                <li class="image-grid__item" data-aos="fade-left" data-aos-duration="1000">
+                    <a href="https://movie-review-tau.vercel.app//" class="grid-item" >
+                      <div class="grid-item__image" style="background-image: url(./images/Movie\ Review.png)"></div>
+                      <div class="grid-item__hover"></div>
+                      <div class="grid-item__name">Movie Review</div>
+                    </a>
+                </li>	
             </ul>
         </div>
     </div>
