--- a/index.html
+++ b/index.html
@@ -181,6 +181,13 @@
                       <div class="grid-item__name">Movie Review</div>
                     </a>
                 </li>	
+                <li class="image-grid__item" data-aos="fade-left" data-aos-duration="1000">
+                    <a href="https://form-handling-zeta.vercel.app/" class="grid-item" >
+                      <div class="grid-item__image" style="background-image: url(./images/Forms.png)"></div>
+                      <div class="grid-item__hover"></div>
+                      <div class="grid-item__name">Registration & Login Forms</div>
+                    </a>
+                </li>	
             </ul>
         </div>
     </div>
