--- a/index.html
+++ b/index.html
@@ -188,6 +188,13 @@
                       <div class="grid-item__name">Registration & Login Forms</div>
                     </a>
                 </li>	
+                <li class="image-grid__item" data-aos="fade-left" data-aos-duration="1000">
+                    <a href="https://react-todo-seven-virid.vercel.app/" class="grid-item" >
+                      <div class="grid-item__image" style="background-image: url(./images/To\ do\ List.png)"></div>
+                      <div class="grid-item__hover"></div>
+                      <div class="grid-item__name">To Do List</div>
+                    </a>
+                </li>	
             </ul>
         </div>
     </div>
