--- a/index.html
+++ b/index.html
@@ -27,30 +27,30 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top" id="scrollspy">
         <div class="container">
-          <a class="navbar-brand" href="#"><b class="navBarLT"><</b> / <b class="navBarRT">></b></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="#page1""> <b class="navBarLT"><</b> / <b class="navBarRT">></b> </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"    aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto me-0 gap-lg-5 px-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#page1">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#page2">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#page3">Works</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#page4">Experience</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#page5">Contact</a>
-              </li>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto me-0 gap-lg-5 px-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#page1">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#page2">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#page3">Works</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#page4">Experience</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#page5">Contact</a>
+                </li>
 
-            </ul>
-          </div>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -63,7 +63,7 @@
                 <h1 data-aos="zoom-in" data-aos-duration="1000" data-aos-offset="300"
                 data-aos-easing="ease-in-sine"><span>I'm</span> Mark Lawrence Peralta</h1> <br>
                 <p data-aos="fade-right" data-aos-duration="1000" data-aos-offset="300"
-                data-aos-easing="ease-in-sine">A Technical Support Specialist practicing <span>Full Stack Web Development </span>in KodeGo.</p> <br>
+                data-aos-easing="ease-in-sine">A Career Shifter practicing <span>Full Stack Web Development </span>in KodeGo.</p> <br>
                 <a href="#page5" class="btn btn-info rounded-0" role="button" data-aos="zoom-in" data-aos-duration="1000" data-aos-offset="300"
                 data-aos-easing="ease-in-sine">Hire Me</a>
 
@@ -94,7 +94,7 @@
               <h1 data-aos="fade-down" data-aos-duration="1000">ABOUT ME</h1> <br> <br>
               <h5 data-aos="fade-left" data-aos-duration="1500">I am a Full Stack Web Developer Student in KodeGo</h5> <br>
               <p class="aboutMe" data-aos="fade-up-left" data-aos-duration="1500">As a web developer, I have a profound love for the challenge of transforming complex ideas into elegant and intuitive design." I'm driven by a deep passion for using technology to create meaningful solutions that enhance people's lives. Continually advancing my skills and knowledge is a top priority for me as I strive to be at the forefront of my field. "Whether it's building responsive websites or developing custom applications, I am constantly exploring innovative ways to expand my horizons and make a lasting impact</p> <br>
-              <a href="#" class="btn btn-info rounded-0" role="button" data-aos="zoom-in" data-aos-duration="1000">Download CV</a>
+              <!-- <a href="#" class="btn btn-info rounded-0" role="button" data-aos="zoom-in" data-aos-duration="1000">Download CV</a> -->
 
 
             </div>
