--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <li data-aos="fade-up-right" data-aos-duration="1000"><a href="https://www.facebook.com/mark.lawrence.g.peralta" target="_blank" ><i class="bi bi-facebook" ></i></a></li>
                 <li data-aos="fade-down-right" data-aos-duration="1000"><a href="https://www.facebook.com/messages/t/1123236590" target="_blank"><i class="bi bi-messenger"></i></a></li>
                 <li data-aos="fade-up-right" data-aos-duration="1000"         ><a href="https://github.com/BeybeeMarcus" target="_blank"><i class="bi bi-github"></i></a></li>          
-                <li data-aos="fade-down-right" data-aos-duration="1000"><a href="#" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+                <!-- <li data-aos="fade-down-right" data-aos-duration="1000"><a href="#" target="_blank"><i class="bi bi-linkedin"></i></a></li> -->
               </ul>
             </div>  
           </div>
@@ -286,7 +286,7 @@
                         <li data-aos="fade-up-right" data-aos-duration="1000"><a href="https://www.facebook.com/mark.lawrence.g.peralta" target="_blank"><i class="bi bi-facebook"></i></a></li>
                         <li data-aos="fade-down-right" data-aos-duration="1000"><a href="https://www.facebook.com/messages/t/1123236590" target="_blank"><i class="bi bi-messenger"></i></a></li>
                         <li data-aos="fade-up-right" data-aos-duration="1000"><a href="https://github.com/BeybeeMarcus" target="_blank"><i class="bi bi-github"></i></a></li>          
-                        <li data-aos="fade-down-right" data-aos-duration="1000"><a href="#" target="_blank"><i class="bi bi-linkedin"></i></a></li>
+                        <!-- <li data-aos="fade-down-right" data-aos-duration="1000"><a href="#" target="_blank"><i class="bi bi-linkedin"></i></a></li> -->
                       </ul>
                         </div>      
             </div>
